# GaitScope

./: .gitignore  ARCHITECTURE.md  HEATMAP_INTEGRATION.md  HEATMAP_USAGE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INTEGRATION_COMPLETE.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TODO.txt  VERIFICATION_CHECKLIST.md  buil_exe.txt  comprobación.py  ephy.py  export_yarray_footprints.py  gaitrite_module.py  gaitrite_viewer.py  info.txt  pyproject.toml  requirements.txt  test_heatmap_integration.py
Heatmap_Project/: L.csv  R.csv  __init__.py  animator.py  gui.py  heatmap.py  io_utils.py  main.py  prerenderer.py  worker.py
Heatmap_Project/test_data/: L.csv  R.csv  rightPoints.json
src/: RAMP.py  base.py  constants.py  main.py
src/algorithms/: export_yarray_footprints.py
src/core/: __init__.py  data_manager.py  heatmap_adapter.py  plot_manager.py  video_controller.py  video_player.py
src/heatmap_generation/: __init__.py  animator.py  heatmap.py  worker.py
src/utils/: __init__.py  file_utils.py  time_utils.py
src/widgets/: clickable_slider.py  heatmap_widget.py
versiones/: leer_video.py  video_player_gui.py
video_gait_analyzer/: __init__.py  constants.py  main.py
video_gait_analyzer/core/: data_manager.py  heatmap_adapter.py  plot_manager.py  video_controller.py  video_player.py
video_gait_analyzer/utils/: __init__.py  file_utils.py  heatmap_utils.py  qt_config.py  time_utils.py
video_gait_analyzer/widgets/: __init__.py  clickable_slider.py  heatmap_widget.py  time_axis.py
